--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 DATABASE_ENGINE=django.db.backends.mysql
 DATABASE_USER=root
 DATABASE_PASSWORD=!@#$12345678
-DATABASE_NAME=brease
+DATABASE_NAME=hey
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 LOGGER_PATH=logs/server.log
+
+ALLOWED_HOSTS=*
